--- a/examples/service_labels/manifests.yaml
+++ b/examples/service_labels/manifests.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: esp-echo
-  namespace: kubedr-examples
+  namespace: kubepilot-examples
 spec:
   ports:
   - port: 80
@@ -19,7 +19,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: esp-echo
-  namespace: kubedr-examples
+  namespace: kubepilot-examples
 spec:
   replicas: 1
   selector:
